Added top nav bar to all pages, header to some

--- a/psychoactive-drugs-assignment/drugs.html
+++ b/psychoactive-drugs-assignment/drugs.html
@@ -5,12 +5,21 @@
         <link rel="stylesheet" href="drugs.css">
     </head>
     <body>
+        <nav>
+            <a class="active" href="drugs.html">Home</a>
+            <a href="depressants.html">Depressants</a>
+            <a href="stimulants.html">Stimulants</a>
+            <a href="hallucinogens.html">Hallucinogens</a>
+            <a href="narcotics.html">Narcotics</a>
+            <a href="works-cited.html">Works Cited</a>
+        </nav>
+
         <header>
             <h1>Types of Psychoactive Drugs</h1>
             <h2>With supporting examples</h2>
-            <h4>There are four types of drugs: <b>depressant</b>, <b>stimulant</b>, <b>hallucinogen</b>, 
-                and <b>narcotic</b>. Each category of drug causes different physiological and psychological 
-                symptoms. Look below to see them all.</h4>
+            <h4>There are four types of drugs: depressants, stimulants, hallucinogens, and narcotics. Each
+                one has defining characteristics such as different physiological and psychological effects
+                as well as different impacts on neurotransmission.</h4>
         </header>
 
 
