--- a/psychoactive-drugs-assignment/stimulants.html
+++ b/psychoactive-drugs-assignment/stimulants.html
@@ -5,6 +5,15 @@
         <link rel="stylesheet" href="drugs.css">
     </head>
     <body>
+        <nav>
+            <a href="drugs.html">Home</a>
+            <a href="depressants.html">Depressants</a>
+            <a class="active" href="stimulants.html">Stimulants</a>
+            <a href="hallucinogens.html">Hallucinogens</a>
+            <a href="narcotics.html">Narcotics</a>
+            <a href="works-cited.html">Works Cited</a>
+        </nav>
+
         <header>
             <h1>Stimulants</h1>
             <h2>They can even affect the immune system!</h2>
