--- a/psychoactive-drugs-assignment/works-cited.html
+++ b/psychoactive-drugs-assignment/works-cited.html
@@ -5,6 +5,19 @@
         <link rel="stylesheet" href="drugs.css">
     </head>
     <body>
+        <nav>
+            <a href="drugs.html">Home</a>
+            <a href="depressants.html">Depressants</a>
+            <a href="stimulants.html">Stimulants</a>
+            <a href="hallucinogens.html">Hallucinogens</a>
+            <a href="narcotics.html">Narcotics</a>
+            <a class="active" href="works-cited.html">Works Cited</a>
+        </nav>
+
+        <header>
+            <h1>Works Cited</h1>
+            <h2>Lorium ipsum dolor amet</h2>
+        </header>
 
     </body>
     <footer>
