--- a/psychoactive-drugs-assignment/depressants.html
+++ b/psychoactive-drugs-assignment/depressants.html
@@ -5,6 +5,30 @@
         <link rel="stylesheet" href="drugs.css">
     </head>
     <body>
+        <nav>
+            <a href="drugs.html">Home</a>
+            <a class="active" href="depressants.html">Depressants</a>
+            <a href="stimulants.html">Stimulants</a>
+            <a href="hallucinogens.html">Hallucinogens</a>
+            <a href="narcotics.html">Narcotics</a>
+            <a href="works-cited.html">Works Cited</a>
+        </nav>
+
+        <header>
+            <h1>Depressants</h1>
+            <h2>Lorium ipsum dolor amet</h2>
+        </header>
+
+        <div class="Stimulants">
+            <div class="Physiological">
+                <h4>Physiological Effects</h4>
+                <p>Lorium ipsum dolor amet</p>
+            </div>
+            <div class="Psychological">
+                <h4>Psychological Effects</h4>
+                <p>Lorium ipsum dolor amet</p>
+            </div>
+        </div>
 
     </body>
     <footer>
