--- a/psychoactive-drugs-assignment/hallucinogens.html
+++ b/psychoactive-drugs-assignment/hallucinogens.html
@@ -19,18 +19,19 @@
             <h2>Lorium ipsum dolor amet</h2>
         </header>
 
-        <div class="Stimulants">
-            <div class="Physiological">
+        <div class="physiological-psychological-effects">
+            <div class="physiological">
                 <h4>Physiological Effects</h4>
                 <p>Lorium ipsum dolor amet</p>
             </div>
-            <div class="Psychological">
+            <div class="psychological">
                 <h4>Psychological Effects</h4>
                 <p>Lorium ipsum dolor amet</p>
             </div>
         </div>
     </body>
     <footer>
+        <hr>
         <p style="color:gray;">&copy Johnathan Van Vliet, November 2023</p>
     </footer>
 </html>
