--- a/psychoactive-drugs-assignment/works-cited.html
+++ b/psychoactive-drugs-assignment/works-cited.html
@@ -16,11 +16,17 @@
 
         <header>
             <h1>Works Cited</h1>
-            <h2>Lorium ipsum dolor amet</h2>
         </header>
+
+        <div class="citations">
+            <h3>Iliades, C., MD. (2023, July 14). How Does Caffeine Affect The Brain and the Brain’s Grey Matter? University Health News. <a href="https://universityhealthnews.com/daily/memory/how-does-caffeine-affect-the-brain-and-the-brains-grey-matter/" target="blank">https://universityhealthnews.com/daily/memory/how-does-caffeine-affect-the-brain-and-the-brains-grey-matter/</a>.</h3>
+            <h3>MSEd, K. C. (2023, June 27). An Overview of Stimulants and How They're Used. Verywell Mind. <a href="https://www.verywellmind.com/what-are-stimulants-2795573" target="_blank">https://www.verywellmind.com/what-are-stimulants-2795573</a>.</h3>
+            <h3>Gunter, M. (2023, May 8). How much caffeine is in espresso? A complete breakdown. Coffee Affection. <a href="https://coffeeaffection.com/how-much-caffeine-in-espresso/" target="_blank">https://coffeeaffection.com/how-much-caffeine-in-espresso/</a>.</h3>
+        </div>
 
     </body>
     <footer>
+        <hr>
         <p style="color:gray;">&copy Johnathan Van Vliet, November 2023</p>
     </footer>
 </html>
