--- a/psychoactive-drugs-assignment/stimulants.html
+++ b/psychoactive-drugs-assignment/stimulants.html
@@ -19,35 +19,36 @@
             <h2>Many of us drink one of these drugs all the time!</h2>
         </header>
 
-        <h3 style="text-align: center;">That's right, not all drugs are illegal, or even highly regulated by the Food and Drug Administration. Caffeine, the chemical found in many teas, coffee, energy drinks, and even most sodas, is a stimulant!</h3>
-        <p style="text-align: center;"><em>Certainly far from the worst stimulant though.</em> Let's focus on caffeine for now.</p>
+        <main>
+            <h3 style="text-align: center;">That's right, not all drugs are illegal, or even highly regulated by the Food and Drug Administration. Caffeine, the chemical found in many teas, coffee, energy drinks, and even most sodas, is a stimulant!</h3>
+            <p style="text-align: center;"><em>Certainly far from the worst stimulant though.</em> Let's focus on caffeine for now.</p>
 
-        <hr>
+            <hr>
 
-        <h2 style="text-align: center;">Caffeine</h2>
-        <div class="physiological-psychological-effects">
-            <div class="physiological">
-                <h4>Physiological Effects</h4>
-                <p>Caffeine can cause an increased heartrate, muscle aches, diarrhea, fertility issues, pregnancy issues, increased urination, increased blood pressure, sleep loss, and jitters. It can also increase your chance of osteoporosis, as caffeine prevents calcium from being properly absorbed into the bones.</p>
+            <h2 style="text-align: center;">Caffeine</h2>
+            <div class="physiological-psychological-effects">
+                <div class="physiological">
+                    <h4>Physiological Effects</h4>
+                    <p>Caffeine can cause an increased heartrate, muscle aches, diarrhea, fertility issues, pregnancy issues, increased urination, increased blood pressure, sleep loss, and jitters. It can also increase your chance of osteoporosis, as caffeine prevents calcium from being properly absorbed into the bones.</p>
+                </div>
+                <div class="psychological">
+                    <h4>Psychological Effects</h4>
+                    <p>Caffeine increases alertness, but can also cause irritability and confusion. Additionally, caffeine can cause higher levels of anxiety. Interestingly, however, studies have found that caffeine consumption can result in a 45% decreased risk of suicide.</p>
+                </div>
             </div>
-            <div class="psychological">
-                <h4>Psychological Effects</h4>
-                <p>Caffeine increases alertness, but can also cause irritability and confusion. Additionally, caffeine can cause higher levels of anxiety. Interestingly, however, studies have found that caffeine consumption can result in a 45% decreased risk of suicide.</p>
+            <div class="other-info">
+                <h4>Overdose and Withdrawal</h4>
+                <p>Caffeine overdose, though uncommon, is possible. Possible effects include confusion, hallucinations, vomiting, and dangerous convulsions.</p>
+                <p>Caffeine withdrawal is common and can include symptoms like anxiety, irritability, and drowsiness. Sudden withdrawal can even cause tremors.</p>
+                <br>
+                <h4>Effects on Neurotransmission</h4>
+                <p>Caffeine is an <b>antagonist</b>, meaning it blocks the neurotransmission of a chemical called adenosine.</p>
+                <p>Adenosine soothes the neurons, therefore slowing down brain function and allowing you to sleep. It builds up naturally throughout the day in time with your circadian rhythm.</p>
+                <p>The result of consuming caffeine is that it prevents your body from feeling tired. However, once the caffeine wears off, all that built up adenosine rushes into the synapses of your neurons, causing what's known as a <b>caffeine crash</b>.</p>
             </div>
-        </div>
-        <div class="other-info">
-            <h4>Overdose and Withdrawal</h4>
-            <p>Caffeine overdose, though uncommon, is possible. Possible effects include confusion, hallucinations, vomiting, and dangerous convulsions.</p>
-            <p>Caffeine withdrawal is common and can include symptoms like anxiety, irritability, and drowsiness. Sudden withdrawal can even cause tremors.</p>
-            <br>
-            <h4>Effects on Neurotransmission</h4>
-            <p>Caffeine is an <b>antagonist</b>, meaning it blocks the neurotransmission of a chemical called adenosine.</p>
-            <p>Adenosine soothes the neurons, therefore slowing down brain function and allowing you to sleep. It builds up naturally throughout the day in time with your circadian rhythm.</p>
-            <p>The result of consuming caffeine is that it prevents your body from feeling tired. However, once the caffeine wears off, all that built up adenosine rushes into the synapses of your neurons, causing what's known as a <b>caffeine crash</b>.</p>
-        </div>
-        <img src="assets/Cappuccino.jpg" alt="Cappuccino" class="centered-image" style="width:20%;height:20%;padding: 50px 0px 5px 0px">
-        <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>An average shot of espresso contains around 80mg of caffeine.</em></p>
-
+            <img src="assets/Cappuccino.jpg" alt="Cappuccino" class="centered-image" style="width:20%;height:20%;padding: 50px 0px 5px 0px">
+            <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>An average shot of espresso contains around 80mg of caffeine.</em></p>
+        </main>
 
     </body>
     <footer>
