--- a/psychoactive-drugs-assignment/works-cited.html
+++ b/psychoactive-drugs-assignment/works-cited.html
@@ -18,11 +18,19 @@
             <h1>Works Cited</h1>
         </header>
 
-        <div class="citations">
-            <h3>Iliades, C., MD. (2023, July 14). How Does Caffeine Affect The Brain and the Brain’s Grey Matter? University Health News. <a href="https://universityhealthnews.com/daily/memory/how-does-caffeine-affect-the-brain-and-the-brains-grey-matter/" target="blank">https://universityhealthnews.com/daily/memory/how-does-caffeine-affect-the-brain-and-the-brains-grey-matter/</a>.</h3>
-            <h3>MSEd, K. C. (2023, June 27). An Overview of Stimulants and How They're Used. Verywell Mind. <a href="https://www.verywellmind.com/what-are-stimulants-2795573" target="_blank">https://www.verywellmind.com/what-are-stimulants-2795573</a>.</h3>
-            <h3>Gunter, M. (2023, May 8). How much caffeine is in espresso? A complete breakdown. Coffee Affection. <a href="https://coffeeaffection.com/how-much-caffeine-in-espresso/" target="_blank">https://coffeeaffection.com/how-much-caffeine-in-espresso/</a>.</h3>
-        </div>
+        <main>
+            <div class="citations">
+                <h3>Iliades, C., MD. (2023, July 14). How Does Caffeine Affect The Brain and the Brain’s Grey Matter? University Health News.https://universityhealthnews.com/daily/memory/how-does-caffeine-affect-the-brain-and-the-brains-grey-matter/</h3>
+                <h3>MSEd, K. C. (2023, June 27). An Overview of Stimulants and How They're Used. Verywell Mind.https://www.verywellmind.com/what-are-stimulants-2795573</h3>
+                <h3>Gunter, M. (2023, May 8). How much caffeine is in espresso? A complete breakdown. Coffee Affection.https://coffeeaffection.com/how-much-caffeine-in-espresso/</h3>
+                <h3> 7 Psychological effects of alcohol You must know! (n.d.). New Health Advisor.https://www.newhealthadvisor.org/Psychological-Effects-of-Alcohol.html</h3>
+                <h3>Alcohol poisoning - Symptoms and causes - Mayo Clinic. (2023, April 29). Mayo Clinic. https://www.mayoclinic.org/diseases-conditions/alcohol-poisoning/symptoms-causes/syc-20354386</h3>
+                <h3>Alcohol use: Weighing risks and benefits. (2021, December 11). Mayo Clinic. https://www.mayoclinic.org/healthy-lifestyle/nutrition-and-healthy-eating/in-depth/alcohol/art-20044551</h3>
+                <h3>Bence, S. (2023, October 25). Symptoms of alcohol withdrawal: timeline and signs of danger. Verywell Health. https://www.verywellhealth.com/alcohol-withdrawal-symptoms-5198606</h3>
+                <h3>The 7 Stages of Alcohol Intoxication | Sunrise House. (2023, November 10). Sunrise House. https://sunrisehouse.com/stop-drinking-alcohol/stages-intoxication/</h3> 
+                <h3>Yang, W., Singla, R., Maheshwari, O., Fontaine, C. J., & Gil-Mohapel, J. (2022). Alcohol Use Disorder: Neurobiology and Therapeutics. Biomedicines, 10(5), 1192. https://doi.org/10.3390/biomedicines10051192</h3>
+            </div>
+        </main>
 
     </body>
     <footer>
