--- a/psychoactive-drugs-assignment/depressants.html
+++ b/psychoactive-drugs-assignment/depressants.html
@@ -16,19 +16,38 @@
 
         <header>
             <h1>Depressants</h1>
-            <h2>Lorium ipsum dolor amet</h2>
+            <h2>An incredibly popular type of drug many of us are familiar with.</h2>
         </header>
 
-        <div class="physiological-psychological-effects">
-            <div class="physiological">
-                <h4>Physiological Effects</h4>
-                <p>Lorium ipsum dolor amet</p>
+        <main>
+            <h3 style="text-align: center;">Alcohol, the drug consumed by over 60% of US adults, is a type of depressant.</h3>
+
+            <hr>
+
+            <h2 style="text-align: center;">Alcohol</h2>
+            <div class="physiological-psychological-effects">
+                <div class="physiological">
+                    <h4>Physiological Effects</h4>
+                    <p>In the short term, consumption of alcohol can cause nausea, vomiting, impaired coordination, and slurred speech. In the long term, it can severely damage internal organs, mainly the liver and heart. Long-term use can also increase one's risk of many cancers.</p>
+                </div>
+                <div class="psychological">
+                    <h4>Psychological Effects</h4>
+                    <p>A major trend has been seen between alcoholism and depression in adults. Similarly, alcohol is known to increase suicidal behavior and self-harm. Alcohol can also cause increased aggression, disturbed sleep patterns, damaged memory, and even psychosis.</p>
+                </div>
             </div>
-            <div class="psychological">
-                <h4>Psychological Effects</h4>
-                <p>Lorium ipsum dolor amet</p>
+            <div class="other-info">
+                <h4>Overdose and Withdrawal</h4>
+                <p>Alcohol poisoning is a condition which begins to occur in some people at above 0.25% BAC (Blood Alcohol Content). It is sometimes deadly and includes symtpoms like seizures, falling into a coma, vomiting, irregular breathing, and confusion.</p>
+                <p>Alcohol withdrawal can include symtpoms like shaking, sweating, headache, nausea, agitation, and anxiety. It is common in those who drink over 15 drinks a week.</p>
+                <br>
+                <h4>Effects on Neurotransmission</h4>
+                <p>Alcohol has a major effect on neurotransmission, affecting the neurotransmission of serotonin, dopamine, gaba, and more. It also affects the function of the amygdala and the basal ganglia.</p>
+                <p>This results in an altered reward and motivation response, as well as decision making and stress.</p>
+                <p>These effects are a result of alcohol's ability to break through the blood-brain barrier, which results in it causing a severe change in mental acuity and processing.</p>
             </div>
-        </div>
+            <img src="assets/jack-daniels.png" alt="Jack Daniels Whiskey" class="centered-image" style="width:20%;height:20%;padding: 50px 0px 5px 0px">
+            <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>"The problem isn't the drunk drivers, it's the drunk crashers"</em> - Anonymous</p>
+        </main>
 
     </body>
     <footer>
