--- a/psychoactive-drugs-assignment/drugs.html
+++ b/psychoactive-drugs-assignment/drugs.html
@@ -20,28 +20,30 @@
             <h4>There are four types of drugs: depressants, stimulants, hallucinogens, and narcotics. Each one has defining characteristics such as different physiological and psychological effects as well as different impacts on neurotransmission.</h4>
         </header>
 
-        <div class="concluding-questions">
-            <h3 style="text-align: center;">Summary of Each Category</h3>
-            <div class="category-summary">
-                <div>
-                    <h4>Stimulants</h4>
-                    <p>Lorium ipsum dolor amet</p>
-                </div>
-                <div>
-                    <h4>Depressants</h4>
-                    <p>Lorium ipsum dolor amet</p>
-            <div class="category-summary">
-                </div>
-                <div>
-                    <h4>Hallucinogens</h4>
-                    <p>Lorium ipsum dolor amet</p>
-                </div>
-                <div>
-                    <h4>Opiates</h4>
-                    <p>Lorium ipsum dolor amet</p>
-                </div>
-            </div>   
-        </div>
+        <main>
+            <div class="concluding-questions">
+                <h3 style="text-align: center;">Summary of Each Category</h3>
+                <div class="category-summary">
+                    <div>
+                        <h4>Stimulants</h4>
+                        <p>Lorium ipsum dolor amet</p>
+                    </div>
+                    <div>
+                        <h4>Depressants</h4>
+                        <p>Lorium ipsum dolor amet</p>
+                <div class="category-summary">
+                    </div>
+                    <div>
+                        <h4>Hallucinogens</h4>
+                        <p>Lorium ipsum dolor amet</p>
+                    </div>
+                    <div>
+                        <h4>Opiates</h4>
+                        <p>Lorium ipsum dolor amet</p>
+                    </div>
+                </div>   
+            </div>
+        </main>
 
          
     </body>
