--- a/psychoactive-drugs-assignment/narcotics.html
+++ b/psychoactive-drugs-assignment/narcotics.html
@@ -19,16 +19,18 @@
             <h2>Lorium ipsum dolor amet</h2>
         </header>
 
-        <div class="physiological-psychological-effects">
-            <div class="physiological">
-                <h4>Physiological Effects</h4>
-                <p>Lorium ipsum dolor amet</p>
+        <main>
+            <div class="physiological-psychological-effects">
+                <div class="physiological">
+                    <h4>Physiological Effects</h4>
+                    <p>Lorium ipsum dolor amet</p>
+                </div>
+                <div class="psychological">
+                    <h4>Psychological Effects</h4>
+                    <p>Lorium ipsum dolor amet</p>
+                </div>
             </div>
-            <div class="psychological">
-                <h4>Psychological Effects</h4>
-                <p>Lorium ipsum dolor amet</p>
-            </div>
-        </div>
+        </main>
     </body>
     <footer>
         <hr>
