Reworked stimulants.html to fit project requirements
The initial drug described, caffeine, was not a part of the allowed drugs list. It was replaced with Nicotine, which is on the list

--- a/psychoactive-drugs-assignment/depressants.html
+++ b/psychoactive-drugs-assignment/depressants.html
@@ -16,7 +16,7 @@
 
         <header>
             <h1>Depressants</h1>
-            <h2>An incredibly popular type of drug many of us are familiar with.</h2>
+            <h2>Let's talk about Alcohol</h2>
         </header>
 
         <main>
