--- a/psychoactive-drugs-assignment/narcotics.html
+++ b/psychoactive-drugs-assignment/narcotics.html
@@ -16,7 +16,7 @@
 
         <header>
             <h1>Narcotics</h1>
-            <h2>Lorium ipsum dolor amet</h2>
+            <h2>Let's talk about fentanyl</h2>
         </header>
 
         <main>
@@ -29,6 +29,16 @@
                     <h4>Psychological Effects</h4>
                     <p>Lorium ipsum dolor amet</p>
                 </div>
+            </div>
+            <div class="other-info">
+                <h4>Overdose and Withdrawal</h4>
+                <p>Caffeine overdose, though uncommon, is possible. Possible effects include confusion, hallucinations, vomiting, and dangerous convulsions.</p>
+                <p>Caffeine withdrawal is common and can include symptoms like anxiety, irritability, and drowsiness. Sudden withdrawal can even cause tremors.</p>
+                <br>
+                <h4>Effects on Neurotransmission</h4>
+                <p>Caffeine is an <b>antagonist</b>, meaning it blocks the neurotransmission of a chemical called adenosine.</p>
+                <p>Adenosine soothes the neurons, therefore slowing down brain function and allowing you to sleep. It builds up naturally throughout the day in time with your circadian rhythm.</p>
+                <p>The result of consuming caffeine is that it prevents your body from feeling tired. However, once the caffeine wears off, all that built up adenosine rushes into the synapses of your neurons, causing what's known as a <b>caffeine crash</b>.</p>
             </div>
         </main>
     </body>
