--- a/psychoactive-drugs-assignment/stimulants.html
+++ b/psychoactive-drugs-assignment/stimulants.html
@@ -16,38 +16,36 @@
 
         <header>
             <h1>Stimulants</h1>
-            <h2>Many of us drink one of these drugs all the time!</h2>
+            <h2>Let's talk about Nicotine</h2>
         </header>
 
         <main>
-            <h3 style="text-align: center;">That's right, not all drugs are illegal, or even highly regulated by the Food and Drug Administration. Caffeine, the chemical found in many teas, coffee, energy drinks, and even most sodas, is a stimulant!</h3>
-            <p style="text-align: center;"><em>Certainly far from the worst stimulant though.</em> Let's focus on caffeine for now.</p>
+            <h3 style="text-align: center;">That's right, not all drugs are illegal. For example, nicotine is a highly addictive chemical found in cigarettes and many vapes. It is commonly derived from tobacco plants and can be very harmful to your health</h3>
 
             <hr>
 
-            <h2 style="text-align: center;">Caffeine</h2>
+            <h2 style="text-align: center;">Nicotine</h2>
             <div class="physiological-psychological-effects">
                 <div class="physiological">
                     <h4>Physiological Effects</h4>
-                    <p>Caffeine can cause an increased heartrate, muscle aches, diarrhea, fertility issues, pregnancy issues, increased urination, increased blood pressure, sleep loss, and jitters. It can also increase your chance of osteoporosis, as caffeine prevents calcium from being properly absorbed into the bones.</p>
+                    <p>Nicotine can cause a loss of appetite, increased heart rate and blood pressure, sweating, diarrhea, and nausea. Additionally, long-term use can damage arteries, the lungs (especially if it's inhaled), the skin, and the brain.</p>
                 </div>
                 <div class="psychological">
                     <h4>Psychological Effects</h4>
-                    <p>Caffeine increases alertness, but can also cause irritability and confusion. Additionally, caffeine can cause higher levels of anxiety. Interestingly, however, studies have found that caffeine consumption can result in a 45% decreased risk of suicide.</p>
+                    <p>Nicotine can improve one's mood as well as improve memory and alertness. That being said, it also has been linked to a higher risk of major psychiatric disorders such as bipolar disorder and major depressive disorder.</p>
                 </div>
             </div>
             <div class="other-info">
                 <h4>Overdose and Withdrawal</h4>
-                <p>Caffeine overdose, though uncommon, is possible. Possible effects include confusion, hallucinations, vomiting, and dangerous convulsions.</p>
-                <p>Caffeine withdrawal is common and can include symptoms like anxiety, irritability, and drowsiness. Sudden withdrawal can even cause tremors.</p>
+                <p>Nicotine overdose is very rare, and oftentimes does not occur with regular use. The most common overdose occurs when someone injests a large amount of vape liquid, which has a high concentration of nicotine in it. Nicotine overdose can cause fainting, difficulty breathing, headache, irregular heart rate, vomiting, and weakness</p>
+                <p>Nicotine withdrawal is common because the acute effects of nicotine wear off after a few minutes. There are a miryad of physiological and psychological symptoms, but the more common ones are dry mouth, insomnia, irritability, cough, and cravings.</p>
                 <br>
                 <h4>Effects on Neurotransmission</h4>
-                <p>Caffeine is an <b>antagonist</b>, meaning it blocks the neurotransmission of a chemical called adenosine.</p>
-                <p>Adenosine soothes the neurons, therefore slowing down brain function and allowing you to sleep. It builds up naturally throughout the day in time with your circadian rhythm.</p>
-                <p>The result of consuming caffeine is that it prevents your body from feeling tired. However, once the caffeine wears off, all that built up adenosine rushes into the synapses of your neurons, causing what's known as a <b>caffeine crash</b>.</p>
+                <p>Nicotine is an <b>agonist</b>, which not only stimulates the brain to produce more dopamine but also increases its overall effect in the brain.</p>
+                <p>Dopamine is a neurotransmitter that's specifically linked to improved mood and the brain's reward systems. It's good to have dopamine, but too much can cause addiction, something that is extremely common with nicotine.</p>
             </div>
-            <img src="assets/Cappuccino.jpg" alt="Cappuccino" class="centered-image" style="width:20%;height:20%;padding: 50px 0px 5px 0px">
-            <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>An average shot of espresso contains around 80mg of caffeine.</em></p>
+            <img src="assets/vape.jpg" alt="Vape" class="centered-image" style="width:20%;height:20%;padding: 50px 0px 5px 0px">
+            <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>Nicotine vapes are small and easy to conceal.</em></p>
         </main>
 
     </body>
