Added TONS of content

--- a/psychoactive-drugs-assignment/drugs.html
+++ b/psychoactive-drugs-assignment/drugs.html
@@ -21,27 +21,33 @@
         </header>
 
         <main>
-            <div class="concluding-questions">
-                <h3 style="text-align: center;">Summary of Each Category</h3>
-                <div class="category-summary">
-                    <div>
+            <div>
+                <h3 style="text-align: center; text-decoration-line: underline;">Summary of Each Drug Category</h3>
+                <p style="text-align: center;"><em>Read more by clicking the tabs above.</em></p>
+                <div class="category-summary-container">
+                    <div class="category-summary">
                         <h4>Stimulants</h4>
-                        <p>Lorium ipsum dolor amet</p>
+                        <p>Stimulants increase neurological activity and typically result in increased levels of energy and mental acuity.</p>
                     </div>
-                    <div>
+                    <div class="category-summary">
                         <h4>Depressants</h4>
-                        <p>Lorium ipsum dolor amet</p>
-                <div class="category-summary">
+                        <p>Depressants decrease neurological activity and oftentimes results in drowsiness and decreased mental acuity.</p>
                     </div>
-                    <div>
+                </div>
+                <div class="category-summary-container">
+                    <div class="category-summary">
                         <h4>Hallucinogens</h4>
-                        <p>Lorium ipsum dolor amet</p>
+                        <p>Scientists are unsure as to how hallucinogens work, but, as the name suggests, they tend to cause hallucinations in high dosages.</p>
                     </div>
-                    <div>
+                    <div class="category-summary">
                         <h4>Opiates</h4>
-                        <p>Lorium ipsum dolor amet</p>
+                        <p>Opiates are a class of pain medication prescribed by doctors. They are extremely dangerous if misused and come in many forms.</p>
                     </div>
-                </div>   
+                </div>
+            </div>
+            <div>
+                <h3 style="text-align: center; text-decoration-line: underline;">Commonalities Of Perception and Neurotransmission</h3>
+                <p style="text-align: center;">Most drugs have a major effect on the top-down perception process, which is based on using knowledge and context to understand sensory input (sight, sound, touch, taste, and smell). This is because they affect the inner-workings of the brain rather than the sensory organs themselves. The main two neurotransmitters that are affected by drugs seem to be dopamine and serotonin, which both impact happiness, stress, and the reward response.</p>
             </div>
         </main>
 
