--- a/psychoactive-drugs-assignment/hallucinogens.html
+++ b/psychoactive-drugs-assignment/hallucinogens.html
@@ -20,32 +20,32 @@
         </header>
 
         <main>
-            <h3 style="text-align: center;">That's right, not all drugs are illegal. For example, nicotine is a highly addictive chemical found in cigarettes and many vapes. It is commonly derived from tobacco plants and can be very harmful to your health</h3>
+            <h3 style="text-align: center;">Although it is still federally illegal in the United States, many states have either decriminalized or legalized this drug for personal and medicinal use. Marijuana itself isn't what causes a high, but THC (Tetrahydrocannabinol), a chemical found in cannabis, does.</h3>
 
             <hr>
 
-            <h2 style="text-align: center;">Nicotine</h2>
+            <h2 style="text-align: center;">Marijuana</h2>
             <div class="physiological-psychological-effects">
                 <div class="physiological">
                     <h4>Physiological Effects</h4>
-                    <p>Nicotine can cause a loss of appetite, increased heart rate and blood pressure, sweating, diarrhea, and nausea. Additionally, long-term use can damage arteries, the lungs (especially if it's inhaled), the skin, and the brain.</p>
+                    <p>Marijuana has few physiological effects, as it mainly impacts the central nervous system. However, it can cause impaired motor function when taken in higher amounts, as well as dizziness and nausea. It also increases appetite.</p>
                 </div>
                 <div class="psychological">
                     <h4>Psychological Effects</h4>
-                    <p>Nicotine can improve one's mood as well as improve memory and alertness. That being said, it also has been linked to a higher risk of major psychiatric disorders such as bipolar disorder and major depressive disorder.</p>
+                    <p>Marijuana can alter one's senses as well as their sense of time. It can also cause changes in mood and difficulty thinking. At high doses, it can cause hallucinations, delusions, and psychosis.</p>
                 </div>
             </div>
             <div class="other-info">
                 <h4>Overdose and Withdrawal</h4>
-                <p>Nicotine overdose is very rare, and oftentimes does not occur with regular use. The most common overdose occurs when someone injests a large amount of vape liquid, which has a high concentration of nicotine in it. Nicotine overdose can cause fainting, difficulty breathing, headache, irregular heart rate, vomiting, and weakness</p>
-                <p>Nicotine withdrawal is common because the acute effects of nicotine wear off after a few minutes. There are a miryad of physiological and psychological symptoms, but the more common ones are dry mouth, insomnia, irritability, cough, and cravings.</p>
+                <p>Marijuana overdose has never been reported, but high doses of THC have been known to cause uncomfortable symptoms. It can cause paranoia and anxiety, as well as a major psychotic episode.</p>
+                <p>Marijuana withdrawal is fairly mild and short lived, and is mostly limited to grouchiness, sleepiness, a decreased appetite, anxiety, and cravings.</p>
                 <br>
                 <h4>Effects on Neurotransmission</h4>
-                <p>Nicotine is an <b>agonist</b>, which not only stimulates the brain to produce more dopamine but also increases its overall effect in the brain.</p>
-                <p>Dopamine is a neurotransmitter that's specifically linked to improved mood and the brain's reward systems. It's good to have dopamine, but too much can cause addiction, something that is extremely common with nicotine.</p>
+                <p>THC is an <b>agonist</b> that stimulate the cannibanoid receptors in the brain that are critical for learning and memory.</p>
+                <p>THC can cause developmental issues relating to these receptors when used regularly by children. Some studies have shown an IQ decrease of up to 8 points in adolescents.</p>
             </div>
-            <img src="assets/vape.jpg" alt="Vape" class="centered-image" style="width:20%;height:20%;padding: 50px 0px 5px 0px">
-            <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>Nicotine vapes are small and easy to conceal.</em></p>
+            <img src="assets/cannabis.jpg" alt="Cannabis Plant" class="centered-image" style="width:30%;height:30%;padding: 50px 0px 5px 0px">
+            <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>Before being processed, cannabis plants look like a harmless bush.</em></p>
         </main>
     </body>
     <footer>
