--- a/psychoactive-drugs-assignment/depressants.html
+++ b/psychoactive-drugs-assignment/depressants.html
@@ -16,7 +16,7 @@
 
         <header>
             <h1>Depressants</h1>
-            <h2>Let's talk about Alcohol</h2>
+            <h2>Let's talk about alcohol</h2>
         </header>
 
         <main>
@@ -45,7 +45,7 @@
                 <p>This results in an altered reward and motivation response, as well as decision making and stress.</p>
                 <p>These effects are a result of alcohol's ability to break through the blood-brain barrier, which results in it causing a severe change in mental acuity and processing.</p>
             </div>
-            <img src="assets/jack-daniels.png" alt="Jack Daniels Whiskey" class="centered-image" style="width:20%;height:20%;padding: 50px 0px 5px 0px">
+            <img src="assets/jack-daniels.png" alt="Jack Daniels Whiskey" class="centered-image" style="width:30%;height:30%;padding: 50px 0px 5px 0px">
             <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>"The problem isn't the drunk drivers, it's the drunk crashers"</em> - Anonymous</p>
         </main>
 
