--- a/psychoactive-drugs-assignment/narcotics.html
+++ b/psychoactive-drugs-assignment/narcotics.html
@@ -20,25 +20,33 @@
         </header>
 
         <main>
+            <h3 style="text-align: center; padding-bottom: 0; margin-bottom: 5;">Fentanyl is an opiate that is 50 to 100 times stronger than morphine, a high strength painkiller used in hospitals. Many drugs that people buy on the street have been found to be laced with this drug in order to make it more addictive, but it actually kills many people. To combat this, companies have created fentanyl testing strips so drugs can be tested for fentanyl. They can be purchased <a href="https://a.co/d/6lNvnzB" target="_blank">here.</a></h3>
+            <p style="text-align: center; padding: 0 0 0 0; margin: 0 0 0 0;"><em>Not an affiliate link.</em></p>
+
+            <hr>
+
             <div class="physiological-psychological-effects">
                 <div class="physiological">
                     <h4>Physiological Effects</h4>
-                    <p>Lorium ipsum dolor amet</p>
+                    <p>There are dozens of side effects that come with fentanyl use, the most severe of which being labored breathing, irregular heartbeat, severe swelling, and fainting.</p>
                 </div>
                 <div class="psychological">
                     <h4>Psychological Effects</h4>
-                    <p>Lorium ipsum dolor amet</p>
+                    <p>The most common severe psychological effect of fentanyl is addiction. Beside that, it can also cause nervousness, hallucinations, extreme sleepiness, and mood swings.</p>
                 </div>
             </div>
             <div class="other-info">
                 <h4>Overdose and Withdrawal</h4>
-                <p>Caffeine overdose, though uncommon, is possible. Possible effects include confusion, hallucinations, vomiting, and dangerous convulsions.</p>
-                <p>Caffeine withdrawal is common and can include symptoms like anxiety, irritability, and drowsiness. Sudden withdrawal can even cause tremors.</p>
+                <p>Fentanyl overdose is common among fentanyl users. The most common signs of overdose are slow or extremely shallow breathing, but other symptoms include depression, weakness, muscle stiffness, back pain, and diarrhea.</p>
+                <p>Unlike most drugs, there is an over-the-counter "antidote" for a fentanyl overdose called naloxone, commonly known as Narcan. Naloxone typically comes in an easy-to-use nasal spray that can temporarily or completely reverse the effects of an overdose. It can be bought at many drugstores without a prescription</p>
+                <p>When someone stops using fentanyl, there is a myriad of symptoms they might experience. Some common ones are high blood pressure and heart rate, nausea and vomiting, anxiety, chills, cramps, and weakness.</p>
+                <p>These symptoms can be severe and extremely uncomfortable, making relapse easy. Because of this, many professionals do not recommend stopping the use of narcotics like fentanyl suddenly (also known as a cold-turkey). Instead, using a method such as drug substitution therapy (where someone is safely transitioned partially or completely off opiates using a substitute drug) significantly decreases the chances of relapse. </p>
                 <br>
                 <h4>Effects on Neurotransmission</h4>
-                <p>Caffeine is an <b>antagonist</b>, meaning it blocks the neurotransmission of a chemical called adenosine.</p>
-                <p>Adenosine soothes the neurons, therefore slowing down brain function and allowing you to sleep. It builds up naturally throughout the day in time with your circadian rhythm.</p>
-                <p>The result of consuming caffeine is that it prevents your body from feeling tired. However, once the caffeine wears off, all that built up adenosine rushes into the synapses of your neurons, causing what's known as a <b>caffeine crash</b>.</p>
+                <p>Fentanyl, is an <b>antagonist</b>, which blocks the pain receptors in the peripheral nervous system from sending pain signals to the brain. Similarly, naloxone is also an antagonist, which blocks opiates from being able to attatch to the pain receptors and cause a reaction in the body.</p>
+                <p>In a medical context, fentanyl's strong pain blocking attributes can be incredibly beneficial. However, unless prescribed by a doctor, fentanyl can be extremely dangerous due to its high toxicity in the body. Although it can produce arguably positive effects neurologically, as little as two <em>milligrams</em> can be emough to kill people.Narcotics are the most different out of all four categories simply because they are much more inherently dangerous than the other categories.</p>
+                <img src="assets/fentanyl.jpg" alt="Fentanyl" class="centered-image" style="width:30%;height:30%;padding: 50px 0px 5px 0px">
+                <p style="font-family:'OldUyghur';text-align:center;padding-top: 0px; margin-top:0px;"><em>Fentanyl deaths are on the rise, almost doubling over the past few years.</em></p>
             </div>
         </main>
     </body>
