--- a/psychoactive-drugs-assignment/stimulants.html
+++ b/psychoactive-drugs-assignment/stimulants.html
@@ -16,7 +16,7 @@
 
         <header>
             <h1>Stimulants</h1>
-            <h2>Let's talk about Nicotine</h2>
+            <h2>Let's talk about nicotine</h2>
         </header>
 
         <main>
