--- a/psychoactive-drugs-assignment/works-cited.html
+++ b/psychoactive-drugs-assignment/works-cited.html
@@ -24,8 +24,12 @@
                 <h3>Alcohol poisoning - Symptoms and causes - Mayo Clinic. (2023, April 29). Mayo Clinic. https://www.mayoclinic.org/diseases-conditions/alcohol-poisoning/symptoms-causes/syc-20354386</h3>
                 <h3>Alcohol use: Weighing risks and benefits. (2021, December 11). Mayo Clinic. https://www.mayoclinic.org/healthy-lifestyle/nutrition-and-healthy-eating/in-depth/alcohol/art-20044551</h3>
                 <h3>Bence, S. (2023, October 25). Symptoms of alcohol withdrawal: timeline and signs of danger. Verywell Health. https://www.verywellhealth.com/alcohol-withdrawal-symptoms-5198606</h3>
+                <h3>Cannabis (Marijuana) DrugFacts | National Institute on Drug Abuse. (2023, December 14). National Institute on Drug Abuse. https://nida.nih.gov/publications/drugfacts/cannabis-marijuana</h3>
+                <h3>Fentanyl addiction: symptoms and signs of abuse. (2022, September 13). American Addiction Centers. https://americanaddictioncenters.org/fentanyl-treatment/signs-of-abuse</h3>
                 <h3>Martin, T. (2022, November 16). What nicotine does to your body. Verywell Mind. https://www.verywellmind.com/nicotine-addiction-101-2825018</h3>
-                <h3>The 7 Stages of Alcohol Intoxication | Sunrise House. (2023, November 10). Sunrise House. https://sunrisehouse.com/stop-drinking-alcohol/stages-intoxication/</h3> 
+                <h3>The 7 Stages of Alcohol Intoxication | Sunrise House. (2023, November 10). Sunrise House. https://sunrisehouse.com/stop-drinking-alcohol/stages-intoxication/</h3>
+                <h3>Vollenweider, Julie. (2023, May 4). What does fentanyl do and how is it misused? Mayo Clinic Press. https://mcpress.mayoclinic.org/opioids/how-fentanyl-is-used-and-misused/</h3>
+                <h3>What is Fentanyl? | National Institute on Drug Abuse. (2023, November 9). National Institute on Drug Abuse. https://nida.nih.gov/research-topics/trends-statistics/infographics/what-fentanyl</h3>
                 <h3>Yang, W., Singla, R., Maheshwari, O., Fontaine, C. J., & Gil-Mohapel, J. (2022). Alcohol Use Disorder: Neurobiology and Therapeutics. Biomedicines, 10(5), 1192. https://doi.org/10.3390/biomedicines10051192</h3>
             </div>
         </main>
