--- a/psychoactive-drugs-assignment/drugs.html
+++ b/psychoactive-drugs-assignment/drugs.html
@@ -45,8 +45,11 @@
                     </div>
                 </div>
             </div>
+
+            <hr>
+
             <div>
-                <h3 style="text-align: center; text-decoration-line: underline;">Commonalities Of Perception and Neurotransmission</h3>
+                <h4 style="text-align: center;">Commonalities Of Perception and Neurotransmission</h4>
                 <p style="text-align: center;">Most drugs have a major effect on the top-down perception process, which is based on using knowledge and context to understand sensory input (sight, sound, touch, taste, and smell). This is because they affect the inner-workings of the brain rather than the sensory organs themselves. The main two neurotransmitters that are affected by drugs seem to be dopamine and serotonin, which both impact happiness, stress, and the reward response.</p>
             </div>
         </main>
